--- a/app/src/main/res/layout/activity_fastag_registration.xml
+++ b/app/src/main/res/layout/activity_fastag_registration.xml
@@ -641,6 +641,7 @@
 
 
                 <CheckBox
+                    android:id="@+id/cbIsCommerical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/_15sdp"
