--- a/app/src/main/res/layout/activity_replace_fastag.xml
+++ b/app/src/main/res/layout/activity_replace_fastag.xml
@@ -329,22 +329,22 @@
                 <LinearLayout
                     android:id="@+id/llReplacement"
                     android:layout_width="match_parent"
-                    android:visibility="gone"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <TextView
                         style="@style/TextView.InterRegular_12ssp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_6sdp"
-                        android:visibility="gone"
                         android:layout_marginTop="@dimen/_15ssp"
                         android:layout_marginEnd="@dimen/_16sdp"
                         android:fontFamily="@font/inter_semibold"
                         android:text="Customer Details:"
                         android:textColor="@color/line_color"
-                        android:textSize="@dimen/_14sdp" />
+                        android:textSize="@dimen/_14sdp"
+                        android:visibility="gone" />
 
                     <TextView
                         style="@style/TextView.InterRegular_12ssp"
@@ -364,9 +364,9 @@
                         android:layout_width="match_parent"
                         android:layout_marginHorizontal="@dimen/_10sdp"
                         android:layout_marginTop="8dp"
-                        android:visibility="gone"
                         android:imeOptions="actionNext"
-                        android:inputType="text" />
+                        android:inputType="text"
+                        android:visibility="gone" />
 
                     <TextView
                         style="@style/TextView.InterRegular_12ssp"
@@ -388,9 +388,9 @@
                         android:layout_marginTop="@dimen/_8sdp"
                         android:clickable="false"
                         android:editable="false"
-                        android:visibility="gone"
                         android:enabled="false"
-                        android:inputType="text" />
+                        android:inputType="text"
+                        android:visibility="gone" />
 
                     <TextView
                         style="@style/TextView.InterRegular_12ssp"
@@ -420,10 +420,10 @@
 
                     <View
                         android:layout_width="match_parent"
-                        android:visibility="gone"
                         android:layout_height="@dimen/_2sdp"
                         android:layout_marginTop="@dimen/_10sdp"
-                        android:background="@color/dark_grey_txt_color10" />
+                        android:background="@color/dark_grey_txt_color10"
+                        android:visibility="gone" />
 
                     <TextView
                         style="@style/TextView.InterRegular_12ssp"
@@ -432,11 +432,11 @@
                         android:layout_marginStart="@dimen/_6sdp"
                         android:layout_marginTop="@dimen/_10ssp"
                         android:layout_marginEnd="@dimen/_16sdp"
-                        android:visibility="gone"
                         android:fontFamily="@font/inter_semibold"
                         android:text="Vehicle Details:"
                         android:textColor="@color/line_color"
-                        android:textSize="@dimen/_14sdp" />
+                        android:textSize="@dimen/_14sdp"
+                        android:visibility="gone" />
 
                     <TextView
                         style="@style/TextView.InterRegular_12ssp"
@@ -445,11 +445,11 @@
                         android:layout_marginStart="@dimen/_6sdp"
                         android:layout_marginTop="@dimen/_15ssp"
                         android:layout_marginEnd="@dimen/_16sdp"
-                        android:visibility="gone"
                         android:fontFamily="@font/inter_semibold"
                         android:text="FASTag Details:"
                         android:textColor="@color/line_color"
-                        android:textSize="@dimen/_14sdp" />
+                        android:textSize="@dimen/_14sdp"
+                        android:visibility="gone" />
 
                     <TextView
                         style="@style/TextView.InterRegular_12ssp"
@@ -563,11 +563,10 @@
 
                     <View
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/_2sdp"
+                        android:layout_height="@dimen/_1sdp"
                         android:layout_gravity="center"
                         android:layout_marginTop="@dimen/_20sdp"
-                        android:layout_marginHorizontal="@dimen/_5sdp"
-                        android:background="@color/black_54" />
+                        android:background="@color/app_color" />
 
                     <TextView
                         style="@style/TextView.InterRegular_12ssp"
@@ -578,9 +577,9 @@
                         android:layout_marginEnd="@dimen/_16sdp"
                         android:fontFamily="@font/inter_semibold"
                         android:text="Other Details ->"
-                        android:visibility="gone"
                         android:textColor="@color/line_color"
-                        android:textSize="@dimen/_14sdp" />
+                        android:textSize="@dimen/_14sdp"
+                        android:visibility="gone" />
 
                     <TextView
                         style="@style/TextView.InterRegular_12ssp"
@@ -609,19 +608,19 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_10sdp"
                         android:layout_marginTop="@dimen/_10ssp"
-                        android:visibility="gone"
                         android:text="Wallet Id"
                         android:textColor="@color/fsm_text_color"
-                        android:textSize="@dimen/_12sdp" />
+                        android:textSize="@dimen/_12sdp"
+                        android:visibility="gone" />
 
                     <EditText
                         android:id="@+id/etv5"
-                        android:enabled="false"
-                        android:visibility="gone"
                         style="@style/EditText.Phone"
                         android:layout_width="match_parent"
                         android:layout_marginHorizontal="@dimen/_10sdp"
-                        android:layout_marginTop="8dp" />
+                        android:layout_marginTop="8dp"
+                        android:enabled="false"
+                        android:visibility="gone" />
 
                     <TextView
                         style="@style/TextView.InterRegular_12ssp"
@@ -639,8 +638,8 @@
                         android:layout_width="match_parent"
                         android:layout_marginHorizontal="@dimen/_10sdp"
                         android:layout_marginTop="8dp"
-                        android:imeOptions="actionNext"
                         android:enabled="false"
+                        android:imeOptions="actionNext"
                         android:inputType="text" />
 
                     <TextView
@@ -694,15 +693,29 @@
                         android:textColor="@color/fsm_text_color"
                         android:textSize="@dimen/_12sdp" />
 
-                    <EditText
-                        android:id="@+id/etv99"
-                        style="@style/EditText.Phone"
+
+                    <LinearLayout
+                        android:id="@+id/llVehicleDescriptor"
                         android:layout_width="match_parent"
+                        android:layout_height="@dimen/_40sdp"
+                        android:layout_gravity="center"
                         android:layout_marginHorizontal="@dimen/_10sdp"
                         android:layout_marginTop="8dp"
-                        android:enabled="false"
-                        android:imeOptions="actionNext"
-                        android:inputType="text" />
+                        android:background="@drawable/edit_back_view3"
+                        android:gravity="center">
+
+                        <Spinner
+                            android:id="@+id/spVehicleDescriptor"
+                            style="@style/spinnerStyle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="@dimen/_25sdp"
+                            android:layout_gravity="center"
+                            android:dropDownVerticalOffset="@dimen/_25sdp"
+                            android:gravity="center"
+                            android:paddingEnd="@dimen/_15sdp" />
+
+                    </LinearLayout>
+
 
                     <TextView
                         android:id="@+id/tvReason"
@@ -715,14 +728,41 @@
                         android:textColor="@color/fsm_text_color"
                         android:textSize="@dimen/_12sdp" />
 
-                    <EditText
-                        android:id="@+id/etReason"
-                        style="@style/EditText.Phone"
+                    <LinearLayout
+                        android:id="@+id/llReason"
                         android:layout_width="match_parent"
+                        android:layout_height="@dimen/_40sdp"
+                        android:layout_gravity="center"
                         android:layout_marginHorizontal="@dimen/_10sdp"
                         android:layout_marginTop="8dp"
+                        android:background="@drawable/edit_back_view3"
+                        android:gravity="center">
+
+                        <Spinner
+                            android:id="@+id/spReason"
+                            style="@style/spinnerStyle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="@dimen/_25sdp"
+                            android:layout_gravity="center"
+                            android:dropDownVerticalOffset="@dimen/_25sdp"
+                            android:gravity="center"
+                            android:paddingEnd="@dimen/_15sdp" />
+
+                    </LinearLayout>
+
+                    <EditText
+                        android:id="@+id/etvReasonDescription"
+                        style="@style/EditText.Phone"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_110sdp"
+                        android:layout_marginHorizontal="@dimen/_10sdp"
+                        android:layout_marginTop="8dp"
+                        android:gravity="start"
+                        android:hint="Please enter reason"
                         android:imeOptions="actionDone"
-                        android:inputType="text" />
+                        android:inputType="text"
+                        android:paddingVertical="@dimen/_5sdp"
+                        android:visibility="gone" />
 
                     <View
                         android:layout_width="match_parent"
