--- a/app/src/main/res/layout/bad_issuence_holder.xml
+++ b/app/src/main/res/layout/bad_issuence_holder.xml
@@ -98,6 +98,7 @@
                     android:layout_marginTop="@dimen/_2sdp"
                     android:fontFamily="@font/inter_semibold"
                     android:singleLine="true"
+                    android:visibility="gone"
                     android:text="Mobile : "
                     android:textColor="@color/fsm_text_color"
                     android:textSize="@dimen/_12sdp"
@@ -110,6 +111,7 @@
                     android:singleLine="true"
                     android:text='@{bean.fastag.mobile_no}'
                     android:textColor="@color/fsm_text_color"
+                    android:visibility="gone"
                     android:textSize="@dimen/_12sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -126,6 +128,7 @@
                     android:fontFamily="@font/inter_semibold"
                     android:singleLine="true"
                     android:text="Provider : "
+                    android:visibility="gone"
                     android:textColor="@color/fsm_text_color"
                     android:textSize="@dimen/_12sdp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -135,6 +138,7 @@
                     style="@style/TextView.InterRegular_12ssp"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:singleLine="true"
+                    android:visibility="gone"
                     android:text="Bajaj"
                     android:textColor="@color/fsm_text_color"
                     android:textSize="@dimen/_12sdp"
@@ -142,6 +146,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -168,6 +173,24 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/tvVerifyNumber"
+                style="@style/TextView.InterRegular_12ssp"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:background="@drawable/custom_round_stroke_fsm"
+                android:foreground="?selectableItemBackground"
+                android:gravity="center"
+                android:onClick="@{v->callback.onItemClick(v,bean,pos)}"
+                android:text="View"
+                android:textColor="@color/app_color"
+                android:textSize="@dimen/_16sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvResetPass" />
+
 
         </LinearLayout>
 
