--- a/app/src/main/res/layout/activity_replace_fastag.xml
+++ b/app/src/main/res/layout/activity_replace_fastag.xml
@@ -658,7 +658,6 @@
                         android:layout_width="match_parent"
                         android:layout_marginHorizontal="@dimen/_10sdp"
                         android:layout_marginTop="8dp"
-                        android:enabled="false"
                         android:imeOptions="actionNext"
                         android:inputType="text" />
 
@@ -678,8 +677,7 @@
                         android:layout_width="match_parent"
                         android:layout_marginHorizontal="@dimen/_10sdp"
                         android:layout_marginTop="8dp"
-                        android:enabled="false"
-                        android:imeOptions="actionNext"
+                        android:imeOptions="actionDone"
                         android:inputType="text" />
 
                     <TextView
