--- a/app/src/main/res/layout/fragment_available_inventory.xml
+++ b/app/src/main/res/layout/fragment_available_inventory.xml
@@ -62,6 +62,8 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:layout_marginBottom="@dimen/_5sdp"
             app:layout_constraintStart_toStartOf="parent"
+            android:paddingBottom="@dimen/_50sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvShowingTags"
             tools:listitem="@layout/holder_available_inventory" />
 
