--- a/app/src/main/res/layout/activity_download_rcactivity.xml
+++ b/app/src/main/res/layout/activity_download_rcactivity.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -20,7 +21,7 @@
         <LinearLayout
             android:id="@+id/ll1"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_165sdp"
+            android:layout_height="@dimen/_43sdp"
             android:background="@drawable/round_bottom_app_bg"
             android:gravity="start"
             android:orientation="horizontal"
@@ -61,6 +62,7 @@
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="@dimen/_10sdp"
             app:cardElevation="@dimen/_6sdp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/ll1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ll1">
@@ -355,11 +357,13 @@
 
         <RadioGroup
             android:id="@+id/rb"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_5sdp"
             android:buttonTint="@color/color_primary"
             android:textColor="@color/black"
+            android:gravity="center"
+            android:orientation="horizontal"
             app:layout_constraintStart_toStartOf="@+id/etvVehicleNumber"
             app:layout_constraintTop_toBottomOf="@+id/etvVehicleNumber">
 
@@ -369,6 +373,7 @@
                 android:layout_height="wrap_content"
                 android:text="Download QR RC "
                 android:textColor="@color/black"
+                android:layout_marginEnd="@dimen/_15sdp"
                 app:layout_constraintStart_toStartOf="@+id/etvVehicleNumber"
                 app:layout_constraintTop_toBottomOf="@+id/rbDownloadPrivahan" />
 
@@ -402,6 +407,36 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rb" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvHomeDrawer"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:overScrollMode="never"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:layout_marginBottom="@dimen/_5sdp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:paddingBottom="@dimen/_50sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvDownload"
+            tools:listitem="@layout/holder_download_transactions" />
+
+        <TextView
+            android:id="@+id/ivNoData"
+            style="@style/TextView.InterRegular_12ssp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:gravity="center_vertical"
+            android:text="No transaction found"
+            android:textColor="@color/line_color"
+            android:textSize="@dimen/_16sdp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvDownload"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
