--- a/app/src/main/res/layout/activity_finza_home.xml
+++ b/app/src/main/res/layout/activity_finza_home.xml
@@ -277,7 +277,7 @@
                     android:backgroundTint="@color/fsm_bg_teal"
                     android:fontFamily="@font/inter_bold"
                     android:gravity="center"
-                    android:text="App Version: v0.02.04(1)"
+                    android:text="App Version: v0.03.01"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_12sdp"
                     app:layout_constraintBottom_toBottomOf="parent"
