--- a/app/src/main/res/layout/fragment_old_inventory.xml
+++ b/app/src/main/res/layout/fragment_old_inventory.xml
@@ -59,8 +59,9 @@
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/_15sdp"
             android:overScrollMode="never"
+            android:layout_marginBottom="@dimen/_5sdp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/tvAssign1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvShowingTags"
             tools:listitem="@layout/holder_old_inventory" />
@@ -179,10 +180,10 @@
             android:layout_marginBottom="@dimen/_5sdp"
             android:background="@drawable/edit_back_view"
             android:backgroundTint="@color/line_color"
+            android:visibility="gone"
             android:fontFamily="@font/inter_medium"
             android:foreground="?selectableItemBackground"
             android:gravity="center"
-            android:visibility="gone"
             android:onClick="@{v -> vm.onClick(v)}"
             android:text="Assign"
             android:textColor="@color/fsm_bg_light_teal"
